--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react": "15.3.1",
     "react-native": "0.32.0",
     "react-native-button": "^1.6.0",
+    "react-native-checkbox": "^1.0.15",
+    "react-native-checkbox-field": "^1.1.0",
+    "react-native-checkbox-touch-events": "^1.0.15",
     "react-native-code-push": "1.14.6-beta",
+    "react-native-custom-checkbox": "^1.5.0",
     "react-native-gifted-spinner": "0.0.5",
     "react-native-modalbox": "^1.3.4",
     "react-native-vector-icons": "^2.0.3",
